<resources>
    <string name="app_name">YourSomePlaces</string>

    <string name="tab_search">검색결과</string>
    <string name="tab_favorites">즐겨찾기</string>

    <string name="msg_empty_favorites1">찜한 숙소가 없습니다.</string>
    <string name="msg_empty_favorites2">마음에드는 숙소를 찜 해두세요.\n더욱더 빠르게 관심 숙소를 찾으실 수 있습니다.</string>

    <string name="sort_recency">최근등록순</string>
    <string name="sort_high_rate">높은평점순</string>
    <string name="sort_low_rate">낮은평점순</string>

    <string name="confirm">적용하기</string>
    <string name="cancel">취소</string>
    <string name="undo">실행취소</string>

    <string name="favorite_add">%s 즐겨찾기 추가됨.</string>
    <string name="won_format">%s 원</string>

</resources>