<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!--정렬선택-->
    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 최근 등록 순 -->
        <RadioButton
            android:id="@+id/rb_sort_recency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/selector_sort_icon"
            android:drawablePadding="150dp"
            android:button="@null"
            android:text="@string/sort_recency"
            android:textColor="@drawable/selector_sort_text"
            android:textSize="15sp"
            android:checked="true"/>

        <!-- 높은 평점 순 -->
        <RadioButton
            android:id="@+id/rb_sort_rate_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/selector_sort_icon"
            android:drawablePadding="150dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sort_high_rate"
            android:textColor="@drawable/selector_sort_text"
            android:textSize="15sp"/>

        <!-- 낮은 평점 순 -->
        <RadioButton
            android:id="@+id/rb_sort_rate_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/selector_sort_icon"
            android:drawablePadding="150dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sort_low_rate"
            android:textColor="@drawable/selector_sort_text"
            android:textSize="15sp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/rg_sort"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_sort"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/red"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="15sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>